2004-07-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (REGEXXER_CXX_HAS_STD_LOCALE): Remove.  libsigc++ 2
	depends on a proper compiler like g++ 3 anyway, so it make sense
	to require support of std::locale from now on.

	* macros/cxx.m4 (REGEXXER_CXX_HAS_STD_LOCALE): Delete the macro.

	* src/statusline.cc: Get rid of the preprocessor conditionals
	around code that makes use of std::locale.
	* src/stringutils.cc: ditto.

2004-07-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Swap invocations of REGEXXER_ARG_ENABLE_WARNINGS()
	and REGEXXER_CXXLINK_VERSION_SCRIPT(), just in case the additional
	warning flags break the test program used by the latter macro.

0.8:

2004-07-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* NEWS: Update.

2004-07-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (hbox_file): Increase "spacing" to 9.

2004-07-06  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/exported-symbols: New file; an ld version script which lists
	the symbols that should be exported explicitely.  Using that makes
	the stripped regexxer binary more than 100k smaller!

	* macros/cxx.m4 (REGEXXER_CXXLINK_VERSION_SCRIPT): New macro to
	test if the linker supports the -Wl,--version-script argument.

	* configure.ac: Call REGEXXER_CXXLINK_VERSION_SCRIPT().

	* src/Makefile.am (dist_noinst_DATA): Distribute exported-symbols.
	(regexxer_DEPENDENCIES): Depend on exported-symbols.
	(regexxer_LDFLAGS): Pass $(REGEXXER_VERSION_SCRIPT) to the linker.

2004-07-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (apply_label_what_markup): Rename from
	apply_label_markup for clarity.

2004-07-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_matches_at_path_iter): Use
	reference arguments instead of pointers.  Make use of sigc::ref()
	to bind a reference argument to a signal handler.
	(FileTree::replace_matches_at_path_iter): ditto